--- a/.github/workflows/test-with-project.yml
+++ b/.github/workflows/test-with-project.yml
@@ -5,6 +5,9 @@ on:
   schedule:
     - cron:  '0 0 * * *'
 
+env:
+  RELEASER_CHANGER: gradle-properties
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -47,6 +50,7 @@ jobs:
         with:
           name: maven-repository
           path: ~/.m2/repository
+      - uses: anatawa12/something-releaser@v2
 
       - name: Setup Gradle Wrapper
         working-directory: test-projects/${{ matrix.project }}
@@ -55,6 +59,7 @@ jobs:
           ../../gradlew --build-file=empty wrapper --gradle-version=${{ matrix.gradle }}
           ./gradlew --build-file=empty wrapper
           rm empty
+          echo "PLUGIN_VERSION=$(cd ../.. && get-version)" >> "$GITHUB_ENV"
 
       - name: Run Build Task
         working-directory: test-projects/${{ matrix.project }}
