--- a/.github/workflows/test-with-project.yml
+++ b/.github/workflows/test-with-project.yml
@@ -33,10 +33,10 @@ jobs:
       fail-fast: false
       matrix:
         gradle:
-          - "4.0"
-          - "5.0"
-          - "6.0"
-          - "7.0"
+          - "4.10.3"
+          - "5.6.4"
+          - "6.9.1" # updating
+          - "7.2"   # updating
         project:
           - simplest-cpw
           - simplest-forge
