--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           fetch-depth: 0
           token: "${{ secrets.ACTIONS_PAT }}"
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v2
+        with:
+          java-version: '8'
+          distribution: 'temurin'
       - uses: anatawa12/something-releaser@v2
       - run: set-git-user anatawa12-bot
 
